--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,15 +20,18 @@ jobs:
       - run: sudo apt-get update
       - run: sudo apt-get install postgresql-client
       - run: whoami
+      - restore_cache:
+          key: deps1-{{ .Branch }}-{{ checksum "api/requirements.txt" }}
+      - restore_cache:
+          key: deps1-{{ .Branch }}-{{ checksum "api/requirements.dev.txt" }}
       - python/install-packages:
           pkg-manager: pip
       - run:
           command: |
             python3 -m venv venv
             . venv/bin/activate
-            cd api
-            pip install -r requirements.txt
-            pip install -r requirements.dev.txt
+            pip install -r api/requirements.txt
+            pip install -r api/requirements.dev.txt
       - save_cache:
           key: deps1-{{ .Branch }}-{{ checksum "api/requirements.txt" }}
           paths:
