--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,6 +26,12 @@ jobs:
       - python/install-packages:
           pip-dependency-file: api/requirements.dev.txt
           pkg-manager: pip
+      - run:
+          command: |
+            python3 -m venv venv
+            . venv/bin/activate
+            pip install -r api/requirements.txt
+            pip install -r api/requirements.dev.txt
       - save_cache:
           key: deps1-{{ .Branch }}-{{ checksum "api/requirements.txt" }}
           paths:
