configure celery and redis

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -18,6 +18,7 @@ services:
       "
     depends_on:
       - db
+      - redis
     # in production environment variables should be in .env file
     # but for purpose of easier setup i decided to hardcode them here
     environment:
@@ -26,6 +27,38 @@ services:
       - DB_USER=devuser
       - DATABASE_PORT=5432
       - DB_PASS=devpass
+      # redis env variables
+      - REDIS_HOST=redis
+      - REDIS_PORT=6379
+      - REDIS_PASS=dev_redispass
+      # celery env variables
+      - CELERY_BROKER_URL=redis://:dev_redispass@redis:6379
+      - CELERY_RESULT_BACKEND=redis://:dev_redispass@redis:6379
+  celery_worker:
+    build:
+      context: ./api
+      args:
+        - DEV=true
+    volumes:
+      - "./api/src:/src"
+    command: celery -A src worker -l INFO
+    depends_on:
+      - db
+      - redis
+      - api
+    environment:
+      - DB_HOST=db
+      - DB_NAME=devdb
+      - DB_USER=devuser
+      - DATABASE_PORT=5432
+      - DB_PASS=devpass
+      # redis env variables
+      - REDIS_HOST=redis
+      - REDIS_PORT=6379
+      - REDIS_PASS=dev_redispass
+      # celery env variables
+      - CELERY_BROKER_URL=redis://:dev_redispass@redis:6379
+      - CELERY_RESULT_BACKEND=redis://:dev_redispass@redis:6379
   db:
     image: postgres:13-alpine
     ports:
@@ -36,6 +69,12 @@ services:
       - POSTGRES_DB=devdb
       - POSTGRES_USER=devuser
       - POSTGRES_PASSWORD=devpass
+  redis:
+    image: redis:6.2-alpine
+    restart: always
+    ports:
+      - '6379:6379'
+    command: redis-server --save 20 1 --loglevel warning --requirepass dev_redispass
 
 volumes:
   dev-db-data:
