--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -1,6 +1,8 @@
+celery>=5.2.7
 Django>=4
 djangorestframework>=3.12.0
 djangorestframework-simplejwt>=5.2.2
 drf-spectacular>=0.15.1
 Pillow>=9.4.0
 psycopg2-binary>=2.8.6
+redis>=4.4.0
